# rusty-fractals

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: rust-ci.yml
src/: io.rs  main.rs  mandelbrot_settings.rs  pixel_colour.rs  size.rs
