[package]
name = "rusty-fractals"
version = "0.1.1"
edition = "2021"
authors = ["Mike Croall"]

[dependencies]
pixels = "0.13.0"
winit = "0.29.15"
winit_input_helper = { version = "0.16.0" }
log = "0.4.19"
env_logger = "0.11.3"
error-iter = "0.4.1"
num = "0.4.1"
colors-transform = "0.2.4"
rayon = "1.7"
image = "0.25.0"
chrono = { version = "0.4.26", default-features = false, features = ["clock"] }
